--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="lib/wysihtml5/bootstrap3-wysihtml5.css">
+	<link rel="stylesheet" href="http://ui-grid.info/release/ui-grid-unstable.css" type="text/css">
 </head>
-<body ng-controller="ctrl">
+<body>
 	<!--------- Displays Header ----------->
 	<div ng-include src="'partials/header.html'"></div>
 	
@@ -27,12 +28,12 @@
 	<script src="js/app.js"></script>
 	<script src="js/routing.js"></script>
 	<script src="js/controllers/articlesController.js"></script>
+	<script src="js/controllers/shareCtrl.js"></script>
 	<script src="js/services/service.js"></script>
-	<script src="js/services/factory.js"></script>
+	<script src="js/factory/factory.js"></script>
 	<script src="js/angular-ui-router.js"></script>	
 	<script src="lib/wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
 	<script src="lib/wysihtml5/bootstrap3-wysihtml5.min.js"></script>
 	<script src="lib/wysihtml5/events.js"></script>
-	
 </body>
 </html>
