--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,29 +5,33 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <title>Epsilon</title>
 	<link rel="stylesheet" href="css/cards.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="lib/wysihtml5/bootstrap3-wysihtml5.css">
 	<link rel="stylesheet" href="http://ui-grid.info/release/ui-grid-unstable.css" type="text/css">
-	
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	
+<!-- 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.js"></script> -->
 </head>
 <body>
 	<!--------- Displays Header ----------->
 	<div ng-include src="'partials/header.html'"></div>
 	
 	<!---- Views will be injected here ---->
-    <div ui-view></div>
+    <div ui-view class="slide-animation"></div>
     
     <!--------- Displays Footer ----------->
     <div ng-include src="'partials/footer.html'"></div>
     
 
-	<!-------------- Scripts -------------->    
-
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+	<!-------------- Scripts -------------->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>    
+ 	
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script> -->
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
+  	<!-- Angular Animate -->
+  	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-animate.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/routing.js"></script>
 	<script src="js/controllers/articlesController.js"></script>
