--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,6 +34,7 @@
   	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-animate.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/routing.js"></script>
+	<script src="js/events.js"></script>
 	<script src="js/controllers/articlesController.js"></script>
 	<script src="js/controllers/shareCtrl.js"></script>
 	<script src="js/services/service.js"></script>
